src/objects/ActualCost__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectTaskAssignment__c</fullName>
        <label>Project Task Assignment</label>
        <referenceTo>pse__Project_Task_Assignment__c</referenceTo>
        <relationshipName>ActualCosts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipName>ActualCosts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>xxActual Cost</label>
    <nameField>
        <displayFormat>ACN-{000000000}</displayFormat>
        <label>Actual Cost Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>xxActual Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>